tests/errors/tuple-index-out-of-range/main.pa
# Indexing past the end of a 2-tuple.
def main = (1, 2).5
